--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/Finxbox.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Finxbox - your Financial Buddy</title>
+    <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
   </head>
   <body>
     <div id="root"></div>
