--- a/index.html
+++ b/index.html
@@ -2,6 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+     <!-- BASIC META -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Finxbox provides financial tools, calculators, and premium software features for traders and investors."
+    />
+    <meta name="robots" content="index, follow" />
     <link rel="icon" type="image/svg+xml" href="/Finxbox.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Finxbox - your Financial Buddy</title>
@@ -12,7 +19,7 @@
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
-  gtag('config', 'G-4281XRHMX4');
+  gtag('config', '%VITE_GA_MEASUREMENT_ID%');
 </script>
   </head>
   <body>
