CANRAL REF ADDED

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
       content="Finxbox provides financial tools, calculators, and premium software features for traders and investors."
     />
     <meta name="robots" content="index, follow" />
+    <!-- CANONICAL (DEFAULT) -->
+    <link rel="canonical" href="https://finxbox.com" />
     <link rel="icon" type="image/svg+xml" href="/Finxbox.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Finxbox - your Financial Buddy</title>
