--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
       content="Finxbox provides financial tools, calculators, and premium software features for traders and investors."
     />
     <meta name="robots" content="index, follow" />
+    <!-- google adsense -->
+     <script 
+     async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5704207549805583"
+     crossorigin="anonymous">
+    </script>
     <!-- CANONICAL (DEFAULT) -->
     <link rel="canonical" href="https://finxbox.com" />
     <link rel="icon" type="image/svg+xml" href="/Finxbox.png" />
@@ -22,9 +27,7 @@
         t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
         y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
     })(window, document, "clarity", "script", "v4tu9dguou");
-</script>
-
-    
+</script>    
     <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXXXXX"></script>
 <script>
